--- a/RSS/app/src/main/res/layout/activity_main.xml
+++ b/RSS/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"/>
 
-        <WebView
+      <!--  <WebView
             android:id="@+id/webview"
             android:layout_width="match_parent"
-            android:layout_height="match_parent" />
+            android:layout_height="match_parent" /> -->
 
 </LinearLayout>
